<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">slexsys.biz</string>
    <string name="save_operation">Do You want to save operation</string>
    <string name="payments">Payments</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="exit_without_save">Exit without save?</string>
    <string name="ne_operation">Operation row info</string>
    <string name="operation_save_problem">Problem when save operation</string>
    <string name="operation_save_successfully">Operation saved successfully</string>
    <string name="object">Object</string>
    <string name="partner">Partner</string>
    <string name="total_in">Total In</string>
    <string name="total_out">Total Out</string>
    <string name="profit">Profit</string>
    <string name="date">Date</string>
    <string name="add_info">Additional information</string>
    <string name="from_object">From Object</string>
    <string name="to_object">To Object</string>
    <string name="user">User</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="item">Item</string>
    <string name="start_acct">Start Acct</string>
    <string name="end_acct">End Acct</string>
    <string name="qtty">Quantity</string>
    <string name="price">Price</string>
    <string name="operation">Operation</string>
    <string name="pay_type">Pay Type</string>
    <string name="measure1">Measure</string>
    <string name="measuer2">Addvanced Measure</string>
    <string name="none">None</string>
    <string name="list_is_empty">List is empty</string>
    <string name="pls_fill_add_info">Please fill additional information</string>
    <string name="operations">Operations</string>
    <string name="edit">Edit</string>
    <string name="finances">Finances</string>
    <string name="documents">Documents</string>
    <string name="reports">Reports</string>
    <string name="options">Options</string>
    <string name="partners">Partners</string>
    <string name="items">Items</string>
    <string name="objects">Objects</string>
    <string name="users">Users</string>
    <string name="cashbook">Cashbook</string>
    <string name="other">Other</string>
    <string name="sum">Sum</string>
    <string name="edit_payment_row">Edit payment row</string>
    <string name="edit_payments">Edit payments</string>
    <string name="acct">Acct</string>
    <string name="description">Description</string>
    <string name="consumption">Consumption</string>
    <string name="type">Type</string>
    <string name="print">Print</string>
    <string name="new_consumption">New consumption</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="code">Code</string>
    <string name="name">Name</string>
    <string name="barcode">Barcode</string>
    <string name="price_in">Price In</string>
    <string name="price_out">Price Out</string>
    <string name="plu">PLU</string>
    <string name="catalog">Catalog</string>
    <string name="barcode_2">Barcode 2</string>
    <string name="ratio">Ratio</string>
    <string name="min_qtty">Minimal Qtty</string>
    <string name="nom_qtty">Nominal Qtty</string>
    <string name="tax_group">Tax Group</string>
    <string name="save">Save</string>
    <string name="exit">Exit</string>
    <string name="add">Add</string>
    <string name="index">Index</string>
    <string name="price_group">Price Group</string>
    <string name="currency">Currency</string>
    <string name="amount_in">Amount In</string>
    <string name="amount_out">Amount Out</string>
    <string name="card">Card</string>
    <string name="level">Level</string>
    <string name="total">Total</string>
    <string name="pay">Pay</string>
    <string name="balance">Balance</string>
    <string name="credit_before">Credit Before</string>
    <string name="credit_after">Credit After</string>
    <string name="print_items_list">Print items list</string>
    <string name="print_payments">Print Payments</string>
    <string name="print_real_qtty">Print real qtty</string>
    <string name="print_price_in">Print PriceIn</string>
    <string name="print_price_out">Print PriceOut</string>
    <string name="print_price_in_out">Print PriceInOut</string>
    <string name="totals">Totals</string>
    <string name="lines">Lines</string>
    <string name="main_filters">Main Filters</string>
    <string name="advanced_filters">Advanced Filters</string>
    <string name="filters_m">Filters M</string>
    <string name="filters_a">Filters A</string>
    <string name="mol">MOL</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="fax">Fax</string>
    <string name="e_mail">E-Mail</string>
    <string name="tex_no">Tax No</string>
    <string name="vat_no">VAT No</string>
    <string name="discount">Discount</string>
    <string name="pay_day">Pay Day</string>
    <string name="operator">Operator</string>
    <string name="done">Done</string>
    <string name="standard">Standard</string>
    <string name="fixed">Fixed</string>
    <string name="groups">Groups</string>
    <string name="all">All</string>
    <string name="pls_fill_desc">Please fill description</string>
    <string name="pls_fill_sum">Please fill sum</string>
    <string name="pls_correct_sum">Please correct sum</string>
    <string name="date_interval">Date Interval</string>
    <string name="search">Search</string>
    <string name="wrong_password">Wrong password</string>
    <string name="save_problem">Save problem</string>
    <string name="PriceGroup">Price Group</string>
    <string name="universal">Universal</string>
    <string name="supplier">Supplier</string>
    <string name="client">Client</string>
    <string name="owner">Owner</string>
    <string name="administrator">Administrator</string>
    <string name="manager">Manager</string>
    <string name="real_qtty">Real Qtty</string>
    <string name="percent">Percent</string>
    <string name="connection_error">Connection Error</string>
    <string name="add_group">Add Group</string>
    <string name="add_sub_group">Add Subgroup</string>
    <string name="delete">Delete</string>
    <string name="not_deleted">Not Deleted</string>
    <string name="cant_remove">Can\'t Remove</string>
</resources>
