<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollViewNEPartner">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/code"
                        android:layout_weight="3.5"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/editTextNEPartnerCode" android:layout_weight="3.1" android:singleLine="true"
                        android:selectAllOnFocus="true"/>
                <Switch
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/switchNEPartnerActive" android:layout_alignWithParentIfMissing="false"
                        android:layout_alignParentBottom="false" android:checked="true"
                        android:enabled="true" android:layout_weight="4"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                              android:layout_height="wrap_content">
                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:text="@string/name" android:layout_weight="2"/>
                <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:id="@+id/editTextNEPartnerName" android:layout_weight="1" android:singleLine="true"
                          android:selectAllOnFocus="true"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                              android:layout_height="wrap_content">
                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:text="@string/mol" android:layout_weight="2"/>
                <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:id="@+id/editTextNEPartnerMOL" android:layout_weight="1" android:singleLine="true"
                          android:selectAllOnFocus="true"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                              android:layout_height="wrap_content">
                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:text="@string/city" android:layout_weight="2"/>
                <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:id="@+id/editTextNEPartnerCity" android:layout_weight="1" android:singleLine="true"
                          android:selectAllOnFocus="true"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                              android:layout_height="wrap_content">
                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:text="@string/address" android:layout_weight="2"/>
                <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:id="@+id/editTextNEPartnerAddress" android:layout_weight="1" android:singleLine="true"
                          android:selectAllOnFocus="true"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                              android:layout_height="wrap_content">
                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:text="@string/phone" android:layout_weight="2"/>
                <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:id="@+id/editTextNEPartnerPhone" android:layout_weight="1" android:singleLine="true"
                          android:selectAllOnFocus="true" android:phoneNumber="true"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                              android:layout_height="wrap_content">
                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:text="@string/fax" android:layout_weight="2"/>
                <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:id="@+id/editTextNEPartnerFax" android:layout_weight="1" android:singleLine="true"
                          android:selectAllOnFocus="true" android:phoneNumber="true"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                              android:layout_height="wrap_content">
                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:text="@string/e_mail" android:layout_weight="2"/>
                <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:id="@+id/editTextNEPartnerEMail" android:layout_weight="1" android:singleLine="true"
                          android:selectAllOnFocus="true"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                              android:layout_height="wrap_content">
                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:text="@string/tex_no" android:layout_weight="2"/>
                <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:id="@+id/editTextNEPartnerTaxNo" android:layout_weight="1" android:singleLine="true"
                          android:selectAllOnFocus="true"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                              android:layout_height="wrap_content">
                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:text="@string/vat_no" android:layout_weight="2"/>
                <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:id="@+id/editTextNEPartnerVATNo" android:layout_weight="1" android:singleLine="true"
                          android:selectAllOnFocus="true"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                              android:layout_height="wrap_content">
                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:text="@string/card" android:layout_weight="2"/>
                <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:id="@+id/editTextNEPartnerCard" android:layout_weight="1" android:singleLine="true"
                          android:selectAllOnFocus="true"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                              android:layout_height="wrap_content">
                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:text="@string/discount" android:layout_weight="2"/>
                <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:id="@+id/editTextNEPartnerDiscount" android:layout_weight="1" android:singleLine="true"
                          android:selectAllOnFocus="true"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                              android:layout_height="wrap_content">
                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:text="@string/pay_day" android:layout_weight="2"/>
                <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:id="@+id/editTextNEPartnerPayDay" android:layout_weight="1" android:singleLine="true"
                          android:selectAllOnFocus="true"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                              android:layout_height="wrap_content">
                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:text="@string/price_group" android:layout_weight="2"/>
                <Spinner android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/spinnerNEPartnerPriceGroup"
                         android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                          android:layout_height="wrap_content">
                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:text="@string/type" android:layout_weight="2"/>
                <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinnerNEPartnerType" android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>