<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_centerVertical="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewNECashbookDateValue"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:text="..."
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonNECashbookDateChoose"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/description"
            android:layout_weight="2"/>
        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:id="@+id/editTextNECashbookDescription" android:layout_weight="1" android:singleLine="true"
                  android:selectAllOnFocus="true"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/type"
            android:layout_weight="2"/>
        <Spinner android:layout_width="match_parent" android:layout_height="wrap_content"
                 android:id="@+id/spinnerNECashbookType" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/sum"
            android:layout_weight="2"/>
        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:id="@+id/editTextNECashbookSum" android:layout_weight="1" android:singleLine="true"
                  android:selectAllOnFocus="true" android:numeric="decimal"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/print"
            android:layout_weight="3.5"/>
        <Switch android:layout_width="match_parent" android:layout_height="wrap_content"
                android:id="@+id/switchNECashbookPrint" android:layout_alignWithParentIfMissing="false"
                android:layout_alignParentBottom="false" android:checked="true" android:enabled="true"
                android:layout_weight="4"/>
    </LinearLayout>
</LinearLayout>